# delta

./: CMakeLists.txt
delta/: Activation.cpp  Activation.h  DomainError.cpp  DomainError.h  DotProductSelfAttention.h  Expression.cpp  Expression.h  ExpressionHierarchy.cpp  ExpressionHierarchy.h  FullyConnected.cpp  FullyConnected.h  NumTraits.cpp  NumTraits.h  deltaUtils.cpp  deltaUtils.h
tests/: CMakeLists.txt  activationTest.cpp  derivatives.cpp
